@@ -66,6 +66,7 @@ url: "http://ster.nlnetlabs.nl/hotspot.txt OK"
 url: "http://fedoraproject.org/static/hotspot.txt OK"
 
 # fallback open DNSSEC resolvers that run on TCP port 80 and TCP port 443.
+# These relay incoming DNS traffic on the other port numbers to the usual DNS
 # the ssl443 adds an ssl server IP, you may also specify one or more hashes
 # the following on one line: ssl443:<space><IP>{<space><HASHoutput>}
 # hash is output of openssl x509 -sha256 -fingerprint -in server.pem
